--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <main class="l-main">
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
+                <div class="home__img">
+                    <img src="assets/img/anishlab1.jpeg" alt="">
+                </div>
                 <div class="home__data">
                     <h1 class="home__title">Hi!<br>I'm <span class="home__title-color">Kumar Anish</span><br>I am a Software Developer</h1>
 
@@ -44,11 +47,7 @@
                     <a href="https://www.linkedin.com/in/kumaranish07/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
 
                     <a href="https://github.com/ianish07" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                </div>
-
-                <div class="home__img">
-                    <img src="assets/img/anishlab1.jpeg" alt="">
-                </div>
+                </div>                
             </section>
 
             <!--===== ABOUT =====-->
@@ -136,7 +135,7 @@
             </section>-->
 
             <!--===== PROJECTS =====-->
-            <section class="work section" id="work">
+            <section class="work section" id="projects">
                 <h2 class="section-title">Projects</h2>
 
                 <div class="work__container bd-grid">
