--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="work__img">
                         <img src="assets/img/quiz.jpg" alt="">
                         <div class="project_text">
-                            <a href="#">Quiz App</a>
+                            <a href="https://github.com/ianish07/QuizApp">Quiz App</a>
                         </div>
                     </div>
 
